# Portfolio_Website

./: .gitignore  .prettierignore  .stylelintrc.json  404.html  CHANGELOG.md  CLAUDE.md  CNAME  Google_Analytics.html  Makefile  National_Parks_Project.html  Portfolio_Website_Project.html  Project_Status.txt  README.md  Shiny_Apps  Shiny_Apps.html  astro.config.mjs  eslint.config.mjs  index.html  package-lock.json  package.json  projects.html  pyproject.toml  tsconfig.json
.claude/: .template-version  template-version
WebContent/: National_Parks_Project.html  index.html
__tests__/: carousel.test.js  chat.test.js  filter.test.js  portfolio-carousel.test.js  portfolio-chat.test.js  portfolio-featured.test.js  projects.test.js  renderer.test.js  utils.test.js  work-filter.test.js
_astro/: Button.5F-1b7VC.css  Button.Bzio68Xz.css  Button.C-38j_xR.css  Button.CqU2Jacm.css  Portfolio.3iPq77Pg.js  Portfolio.7URDxJ43.js  Portfolio.B2dpsTDE.js  Portfolio.BM1UE7rF.js  Portfolio.BSs74UYc.js  Portfolio.DLRKmffd.js  Portfolio.DNcG7H8y.js  Portfolio.DmpUmptt.js  Portfolio.KH0h4M0G.js  Portfolio.P2rpb_wV.js  Portfolio._GGgU9Ej.js  Portfolio.thNiQj9n.js  Portfolio.xMfs6ws9.js
afk-cockpit/: index.html
dashboard/: app_bundled.html  app_bundled.js  app_bundled.py  index.html
lambda/: knowledge_base.json  lambda_function.py  requirements.txt
scripts/: build_knowledge_base.py  collect-metrics.py  com.cdcoonce.portfolio-metrics.plist  com.charleslikesdata.portfolio-metrics.plist  metrics-cron.md
tests/: conftest.py  helpers.py  test_accessibility.py  test_askai.py  test_chat.py  (+20 more)
(+199 files in other folders)
